# newYohohScript

./: CMakeLists.txt  README.md
src/: main.cpp  utils.cpp  utils.hpp
src/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/runtime/: interpreter.cpp  interpreter.hpp  values.hpp
test/: test.yhs
